--- a/序列构成的数组/切片.ipynb
+++ b/序列构成的数组/切片.ipynb
@@ -76,15 +76,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[0, 1, 20, 30, 5, 6, 7, 8, 9]\n",
+      "[0, 1, 20, 30, 5, 8, 9]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "can only assign an iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-96f27225950d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mdel\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0ml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: can only assign an iterable"
+     ]
+    }
+   ],
+   "source": [
+    "# 如果把切片放在赋值语句的左边、或者把它作为del操作的对象，那么我们就可以对序列进行嫁接、切除或者就地修改操作\n",
+    "l = list(range(10))\n",
+    "print(l)\n",
+    "l[2:5] = [20,30]\n",
+    "print(l)\n",
+    "del l[5:7]\n",
+    "print(l)\n",
+    "l[2:5] = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# 如果把切片放在赋值语句的左边、或者把它作为del操作的对象，那么我们就可以对序列进行嫁接、切除或者就地修改操作\n",
-    "l = list(range(10))\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
