--- a/序列构成的数组/用bisect来管理已排序的序列.ipynb
+++ b/序列构成的数组/用bisect来管理已排序的序列.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -30,17 +30,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# bisect还有一个姊妹函数bisect_left，区别在于，bisect_left返回的插入位置是原序列中根被插入元素相等的元素位置，也就是新元素会放置于它\n",
+    "# 相等的元素前面，而bisect相当于bisect_right，返回的是跟他相等的元素之后的位置\n",
+    "print(bisect.bisect(haystack,23))\n",
+    "print(bisect.bisect_left(haystack,23))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 5, 6, 7, 12, 15, 20, 21, 22, 22, 22, 23, 23, 26, 29, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 使用insort函数插入一个元素到序列中，同样有insort_left方法\n",
+    "bisect.insort(haystack,22)\n",
+    "print(haystack)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# bisect还有一个姊妹函数bisect_left，区别在于，bisect_left返回的插入位置是原序列中根被插入元素相等的元素位置，也就是新元素会放置于它\n",
-    "# 相等的元素前面，而bisect相当于bisect_right，返回的是跟他相等的元素之后的位置\n",
-    "print(bisect.bisect(haystack,23))\n",
-    "print(bisect.bisect_left(haystack,))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
